--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,43 +1,21 @@
 <div class="container">
 	<div class="row">
 		<div class="col-xs-3">
-			<%= render 'users/template', {user: @user, book: @book} %>
+			<%= render 'users/template', {user: @user, book: @book_new} %>
 		</div>
 		<div class="col-xs-9">
 			<h2>Book detail</h2>
 			<table class="table">
-				<tbody>
-					<tr>
-						<td>
-							<%= link_to user_path(@user.id), user_id: @user.id do %>
-								<%= attachment_image_tag @user, :profile_image, format: 'jpeg', size: '50x50' %><br>
-								<%= @user.name %>
-							<% end %>
-						</td>
-						<td><%= @book_show.title %></td>
-						<td><%= @book_show.body %></td>
-						<td>
-							<%= render 'books/favorite_button', book: @book_show %>
-						</td>
-						<td>コメント数： <%= @book_show.book_comments.count %></td>
-						<td></td>
-						<% if @user.id == current_user.id %>
-							<td>
-								<%= link_to edit_book_path(@book_show.id) do %>
-									<button type="button" class="btn btn-success btn-block" aria-label="Left Align">Edit</button>
-								<% end %>
-							</td>
-							<td>
-								<%= link_to book_path(@book_show.id), method: :delete, "data-confirm" => "本当に消しますか？" do %>
-									<button type="button" class="btn btn-danger btn-block" aria-label="Left Align">Destroy</button>
-								<% end %>
-							</td>
-						<% end %>
-					</tr>
+				<tbody id="book-detail">
+					<%= render 'books/book_show_row', { user: @user, book: @book} %>
 				</tbody>
 			</table>
-			<%= render 'book_comments', comments: @comments %>
-			<%= render 'form_book_comment', comment: @comment, book: @book_show %>
+			<div id="comment-index">
+				<%= render 'books/book_comments', comments: @comments %>
+			</div>
+			<div id="comment-form">
+				<%= render 'books/form_book_comment', comment: @comment, book: @book %>
+			</div>
 		</div>
 	</div>
 </div>
